--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "DEBUG=krovostok:server node ./bin/www"
+    "start": "DEBUG=krovostok:server,mongoose node ./bin/www"
   },
   "dependencies": {
     "body-parser": "~1.17.1",
@@ -12,6 +12,8 @@
     "express": "~4.15.2",
     "mongoose": "^4.11.12",
     "morgan": "~1.8.1",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
     "pug": "~2.0.0-beta11",
     "serve-favicon": "~2.4.2"
   }
