--- a/package.json
+++ b/package.json
@@ -3,18 +3,33 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "DEBUG=krovostok:server,mongoose node ./bin/www"
+    "start": "DEBUG=krovostok:server,mongoose node ./bin/www",
+    "w": "webpack --config webpack.config.babel.js"
   },
   "dependencies": {
     "body-parser": "~1.17.1",
     "cookie-parser": "~1.4.3",
+    "cookie-session": "^1.3.1",
     "debug": "~2.6.3",
     "express": "~4.15.2",
+    "express-session": "^1.15.5",
     "mongoose": "^4.11.12",
     "morgan": "~1.8.1",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "pug": "~2.0.0-beta11",
+    "react": "^15.6.1",
+    "react-dom": "^15.6.1",
+    "redux": "^3.7.2",
     "serve-favicon": "~2.4.2"
+  },
+  "devDependencies": {
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "babel-register": "^6.26.0",
+    "html-webpack-plugin": "^2.30.1",
+    "webpack": "^3.6.0"
   }
 }
