--- a/package.json
+++ b/package.json
@@ -4,15 +4,20 @@
   "private": true,
   "scripts": {
     "start": "DEBUG=krovostok:server,mongoose node ./bin/www",
-    "w": "webpack --config webpack.config.babel.js"
+    "w": "webpack-dev-server --env.dev --config webpack.config.babel.js --colors",
+    "wp": "rm -rf public/dist && webpack -p --env.production --config webpack.config.babel.js --colors"
   },
   "dependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-preset-env": "^1.6.0",
     "body-parser": "~1.17.1",
     "cookie-parser": "~1.4.3",
     "cookie-session": "^1.3.1",
     "debug": "~2.6.3",
     "express": "~4.15.2",
     "express-session": "^1.15.5",
+    "isomorphic-fetch": "^2.2.1",
     "mongoose": "^4.11.12",
     "morgan": "~1.8.1",
     "passport": "^0.4.0",
@@ -20,6 +25,8 @@
     "pug": "~2.0.0-beta11",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
+    "react-router": "^4.2.0",
+    "react-router-dom": "^4.2.2",
     "redux": "^3.7.2",
     "serve-favicon": "~2.4.2"
   },
@@ -30,10 +37,13 @@
     "babel-preset-react": "^6.24.1",
     "babel-register": "^6.26.0",
     "css-loader": "^0.28.7",
-    "html-webpack-plugin": "^2.30.1",
+    "extract-text-webpack-plugin": "^3.0.0",
+    "html-webpack-plugin": "^2.28.0",
     "node-sass": "^4.5.3",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.18.2",
-    "webpack": "^3.6.0"
+    "webpack": "^3.6.0",
+    "webpack-dev-middleware": "^1.12.0",
+    "webpack-dev-server": "^2.8.2"
   }
 }
