--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "DEBUG=krovostok:server,mongoose node ./bin/www",
+    "start": "DEBUG=krovostok:server,req,mongoose node ./bin/www",
     "w": "webpack-dev-server --env.dev --config webpack.config.babel.js --colors",
     "wp": "rm -rf public/dist && webpack -p --env.production --config webpack.config.babel.js --colors"
   },
