--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "~4.15.2",
     "express-session": "^1.15.5",
     "isomorphic-fetch": "^2.2.1",
+    "lodash": "^4.17.4",
     "mongoose": "^4.11.12",
     "morgan": "~1.8.1",
     "passport": "^0.4.0",
