--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.6.0",
     "body-parser": "~1.17.1",
+    "cloudinary": "^1.9.1",
     "cookie-parser": "~1.4.3",
     "cookie-session": "^1.3.1",
     "debug": "~2.6.3",
     "express": "~4.15.2",
     "express-session": "^1.15.5",
+    "formidable": "^1.1.1",
     "isomorphic-fetch": "^2.2.1",
     "lodash": "^4.17.4",
     "mongoose": "^4.11.12",
