--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "formidable": "^1.1.1",
     "isomorphic-fetch": "^2.2.1",
     "lodash": "^4.17.4",
+    "material-ui": "^1.0.0-beta.27",
+    "material-ui-icons": "^1.0.0-beta.17",
     "mongoose": "^4.11.12",
     "morgan": "~1.8.1",
     "passport": "^0.4.0",
