--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "cookie-parser": "~1.4.3",
     "cookie-session": "^1.3.1",
     "debug": "~2.6.3",
+    "eslint": "^4.15.0",
     "express": "~4.15.2",
     "express-session": "^1.15.5",
     "formidable": "^1.1.1",
@@ -52,6 +53,13 @@
     "babel-preset-react": "^6.24.1",
     "babel-register": "^6.26.0",
     "css-loader": "^0.28.7",
+    "eslint-config-standard": "^11.0.0-beta.0",
+    "eslint-config-standard-react": "^5.0.0",
+    "eslint-plugin-import": "^2.8.0",
+    "eslint-plugin-node": "^5.2.1",
+    "eslint-plugin-promise": "^3.6.0",
+    "eslint-plugin-react": "^7.5.1",
+    "eslint-plugin-standard": "^3.0.1",
     "extract-text-webpack-plugin": "^3.0.0",
     "html-webpack-plugin": "^2.28.0",
     "node-sass": "^4.5.3",
